@@ -1,3 +1,7 @@
+1950.	[port]		Solaris 2.5.1 and earlier cannot bind() then connect()
+			a TCP socket. This prevents the source address being
+			set for TCP connections. [RT #15628]
+
 1949.	[func]		Addition memory leakage checks. [RT #15544]
 
 1948.	[bug]		If was possible to trigger a REQUIRE failure in
